--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^4.0.2",
+    "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.15"
   }
