--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ FACEBOOK_ID=SKIP
 FACEBOOK_SECRET=SKIP
 FACEBOOK_CALLBACK=http://localhost:3000/auth/facebook/callback
 SESSION_SECRET=ThisIsMySecret
-MONGODB_URI=mongodb://localhost/expense-tracker
+MONGODB_URI="mongodb+srv://alpha:camp@cluster0.gnm4xsn.mongodb.net/20221113expense-tracker?retryWrites=true&w=majority"
 PORT=3000
